<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stats.vicky.cabtesting.EmpDetails"
    android:id="@+id/drawerlayout"

>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


<include android:layout_width="match_parent"
    android:layout_height="wrap_content"
    layout="@layout/appbar"/>

        <AutoCompleteTextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source" />

        <AutoCompleteTextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination" />

        <TimePicker
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:headerBackground="@android:color/black"
            android:numbersSelectorColor="@color/colorOrange" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/submit" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
<include
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    layout="@layout/navigation"
    android:layout_gravity="start"
    />



</android.support.v4.widget.DrawerLayout>
