<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stats.vicky.cabtesting.Login">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:background="@color/colorGreen"

            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/colorWhite"
                android:visibility="visible"
                android:layout_gravity="center"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sign"
                android:onClick="signIn"/>
        </LinearLayout>


    </GridLayout>
</android.widget.LinearLayout>
